testsuite/bsc.typechecker/deriving/DerivingViaMultiCon.bs.bsc-out.expected
checking package dependencies
compiling DerivingViaMultiCon.bs
Error: "DerivingViaMultiCon.bs", line 17, column 11: (T0000)
  Illegal deriving: MyC via W: the via target must be a data type whose single
  constructor is named W and takes a single argument
